about section part-1

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 // Components
 @import "components/button";
 // Layout
+@import "layout/grid";
 @import "layout/header";
 // Pages
 @import "pages/home";
