--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "base/utilities";
 // Components
 @import "components/button";
+@import "components/composition";
 // Layout
 @import "layout/grid";
 @import "layout/header";
