--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -15,3 +15,9 @@
     transform: skewY(6deg);
   }
 }
+
+.section-tours {
+  background-color: $color-grey-light-1;
+  padding: 25em 0 50rem 0;
+  margin-top: -10rem;
+}
